--- a/src/main/resources/static/files.css
+++ b/src/main/resources/static/files.css
@@ -155,6 +155,13 @@ h1{
     height: 26px;
     width: 26px;
     transition: ease all 0.15s;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.hideModal{
+    display: none;
 }
 
 .view-btn:hover {
