--- a/src/main/resources/templates/admin-partner.html
+++ b/src/main/resources/templates/admin-partner.html
@@ -117,6 +117,9 @@
         <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
             <a href="/files">My Files</a>
         </div>
+        <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
+            <a href="/logout">LOG OUT</a>
+        </div>
     </div>
     <div class="--graphium-window">
         <div>
