--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -191,6 +191,9 @@
         <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
             <a href="/file">UPLOAD A FILE</a>
         </div>
+        <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
+            <a href="/logout">LOG OUT</a>
+        </div>
     </div>
     <div class="--graphium-window">
         <div>
