--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <p>Home Page</p>
     <a href="/files">VIEW MY FILES</a>
     <a href="/upload">UPLOAD A FILE</a>
+    <a href="/logout">LOG OUT</a>
 </div>
 </body>
 </html>
