--- a/src/main/resources/templates/admin-verify.html
+++ b/src/main/resources/templates/admin-verify.html
@@ -55,6 +55,9 @@
         <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
             <a href="/files">My Files</a>
         </div>
+        <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
+            <a href="/logout">LOG OUT</a>
+        </div>
     </div>
     <div class="--graphium-window">
         <div id = "content">
