file upload restyle

--- a/src/main/resources/templates/file-upload.html
+++ b/src/main/resources/templates/file-upload.html
@@ -7,10 +7,9 @@
     <title>Upload File</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/files.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script>
+     <script>
         function niceInputs() {
             [].forEach.call(document.getElementsByClassName("form-input"), (form_input) => {
                 form_input.getElementsByTagName("input")[0].addEventListener("focus", () => {
@@ -42,35 +41,40 @@
 <div layout:fragment="content">
     <div style="display: inline-flex;width: 87.5%;padding-bottom: 10px">
         <div style="width: 50%;display: flex;justify-content: left;align-items: start;">
-            <h1>My Organisation Name</h1>
+            <h1 style="color: white" th:text = "${organisationName}"></h1>
         </div>
         <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
-            <a href="/myFiles">VIEW MY FILES</a>
+            <a/>
         </div>
         <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
-            <a href="/file">UPLOAD A FILE</a>
+            <a style="color: white; text-decoration: none" href="/file">UPLOAD A FILE</a>
         </div>
         <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
-            <a href="/logout">LOG OUT</a>
+            <a style="color: white; text-decoration: none" href="/logout">LOG OUT</a>
         </div>
+
     </div>
     <div class="--graphium-window">
-        <div>
-            <form th:action="@{/upload}" enctype="multipart/form-data" th:method="post" th:object="${fileForm}">
+        <div style="justify-content: center;display: flex;">
+            <form th:action="@{/upload}" enctype="multipart/form-data" th:method="post" th:object="${fileForm}" style="width: 90%;">
 
                 <input th:field="*{fileId}" type="hidden"/>
-                <div class="row">
-                    <div class = "col-md">
-                        <div class="mb-3">
-                            <label class="text-secondary" for="file">File: </label><br>
-                            <input th:field="*{file}" type="file" required/>
-
+                <div style="display: flex; justify-content: center; width: 100%;padding: 10px">
+                    <h2>Upload a file.</h2>
+                </div>
+                <div style="display: inline-flex; width: 100%;padding: 10px">
+                    <div style="width: 100%;justify-content: left;align-content: center;display: flex;" class = "col-md">
+                        <div style="width: 100%;display: flex;justify-content: center;" class="mb-3">
+                            <input th:field="*{file}" type="file" name="file" id="file"/>
+                            <label for="file">Choose a file</label>
                         </div>
                     </div>
-                    <div class = "col-md">
-                        <div class="mb-3">
+                </div>
+                <div style="display: inline-flex; width: 100%;padding: 10px">
+                    <div style="width: 100%;justify-content: center;align-content: center;display: flex;" class = "col-md">
+                        <div style="width: 100%" class="mb-3">
                             <label class="text-secondary" for="fileName">Upload Name: </label><br>
-                            <input th:field="*{fileName}" type="text" required/>
+                            <input class="userInput" th:field="*{fileName}" type="text" required/>
                             <div class="alert alert-warning" th:errors="*{fileName}" th:if="${#fields.hasErrors('fileName')}">Comment
                                 Error
                             </div>
@@ -78,11 +82,30 @@
                         </div>
                     </div>
                 </div>
-                <div class = "row">
+                <div style="display: inline-flex;width: 100%;padding: 10px;" >
                     <div class="alert alert-danger" th:if="${errorMessage != null}" th:text="${errorMessage}">File Error</div>
                 </div>
-                <div class="row">
-                    <div class = "col-lg-6">
+                <div style="display: inline-flex;width: 100%;padding: 10px;">
+                    <div style="width: 50%;justify-content: left;align-content: center;display: flex;"  class = "col-md-6">
+                        <div style="width: 80%" class="mb-3">
+                            <label class="text-secondary" for="subject">Subject:</label><br>
+                            <input class="userInput" th:field="*{subject}" type="text" />
+
+                        </div>
+                    </div>
+                    <div style="width: 50%;justify-content: left;align-content: center;display: flex;"  class = "col-md-6">
+                        <div style="width: 80%" class="mb-3">
+                            <label class="text-secondary" for="comment">Comment: </label><br>
+                            <input class="userInput" th:field="*{comment}" type="text"/>
+                            <div class="alert alert-warning" th:errors="*{comment}" th:if="${#fields.hasErrors('comment')}">Comment
+                                Error
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div style="display: inline-flex;width: 100%;padding: 10px;" >
+                    <div style="width: 50%;justify-content: left;align-content: center;display: flex;"  class = "col-lg-6">
                         <div class = "form-check form-check-inline">
                             <div class="mb-3">
                                 <label class="form-label text-secondary" for="tag">Tag: </label><br>
@@ -96,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class = "col-lg-6">
+                    <div style="width: 50%;justify-content: left;align-content: center;display: flex;"  class = "col-lg-6">
                         <div class = "form-check form-check-inline">
                             <div class="mb-3">
                                 <label class="form-label text-secondary" for="accessLevel">Access Level: </label><br>
@@ -114,40 +137,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class = "col-md-6">
-                        <div class="mb-3">
-                            <label class="text-secondary" for="subject">Subject:</label><br>
-                            <input th:field="*{subject}" type="text" />
-
-                        </div>
-                    </div>
-                    <div class = "col-md-6">
-                        <div class="mb-3">
-                            <label class="text-secondary" for="comment">Comment: </label><br>
-                            <input th:field="*{comment}" type="text"/>
-                            <div class="alert alert-warning" th:errors="*{comment}" th:if="${#fields.hasErrors('comment')}">Comment
-                                Error
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm">
-
-
-                        </div>
-                        <div class="col-sm">
-                            <button class="btn btn-dark btn-lg">Submit</button>
+                <div style="display: inline-flex;width: 100%;padding: 10px;">
+                    <div  style="width: 100%;justify-content: center;align-content: center;display: flex;" class="row">
+                        <div style="padding: 10px; width: 100%;justify-content: center;display: flex;" class="col-sm">
+                            <button style="background-color: #266C91; width: 70%; height: 30px;border-radius: 5px;color: white;border: 1px solid #2b80a9;cursor: pointer">Upload</button>
                         </div>
                     </div>
                 </div>
             </form>
-            <div class = "d-flex">
-                <a href = "/myFiles"><button class="btn btn-danger btn-lg">Cancel</button></a>
-            </div>
+
         </div>
     </div>
 
