--- a/src/main/resources/templates/files.html
+++ b/src/main/resources/templates/files.html
@@ -294,6 +294,9 @@
             <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
                 <a style="color: white; text-decoration: none" href="/file">UPLOAD A FILE</a>
             </div>
+            <div style="width: 25%;display: flex;justify-content: right;align-items: end;">
+                <a style="color: white; text-decoration: none" href="/logout">LOG OUT</a>
+            </div>
         </div>
         <div class="--graphium-window">
             <div>
