--- a/src/main/resources/static/files.css
+++ b/src/main/resources/static/files.css
@@ -166,6 +166,38 @@ h1{
     display: none;
 }
 
+.inputFile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputFile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: white;
+    background-color: black;
+    display: inline-block;
+}
+
+.userInput{
+    width: 100%;
+    height: 25px;
+    border-radius: 5px;
+    border: 1px solid #c2c2c2;
+    padding: 2px;
+    margin: 5px;
+
+}
+
+.inputFile:focus + label,
+.inputFile + label:hover {
+    background-color: red;
+}
+
 .view-btn:hover {
     background-color: #bdbdbd;
 }
@@ -196,6 +228,7 @@ h1{
     margin: 8px 0;
     box-sizing: border-box;
     border-radius: 5px;
+    border: 1px solid #c2c2c2;
 }
 
 .disabled{
